--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ header {
     position: relative;
 }
 
+.container-modal {
+    margin: 0 auto;
+    width: 660px;
+    margin-left: 20px;
+}
+
 .header-top {
     height: 44px;
     width: 100%;
@@ -30,6 +36,22 @@ header {
     height: 44px;
     width: 100%;
     background-color: #F5F5F7;
+    animation: header-animate 3s;
+}
+
+@keyframes header-animate {
+    0% {
+    background-color: #F5F5F7;
+    color: white;
+    }
+    50% {
+        background-color: #0071e3;
+        color: white;
+    }
+    100% {
+        background-color: #F5F5F7;
+        color: black;
+    }
 }
 
 .header-top-center {
@@ -394,4 +416,211 @@ header {
     border: 1px solid black;
     background-color: transparent;
     margin-top: 10px;
+}
+
+.modal-bg {
+    background-color: rgba(0, 0, 0, .5);
+    display: none;
+    height: 270vh;
+    width: 100%;
+    backdrop-filter: blur(5px);
+    margin-top: -1000px;
+}
+
+.modal {
+    display: none;
+    height: 2500px;
+    width: 800px;
+    background-color: white;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    translate: 50% 50%;
+    z-index: 2;
+    margin-top: -1040px;
+    margin-bottom: 100px;
+    padding: 50px 0 0 0;
+}
+
+.btn-close {
+    background-color: ghostwhite;
+    border-radius: 50px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    border: none;
+    margin: -30px 0 0 20px;
+    padding: 3px 0 0 0;
+    filter: invert(1);
+}
+
+.modal-top {
+    text-align: center;
+}
+
+.modal-top h1{
+    font-size: 32px;
+}
+
+.modal-top a {
+    color: blue;
+}
+
+.modal-top p {
+    margin-top: 20px;
+}
+
+.company-1 {
+    width: 90px;
+    height: 40px;
+    border-radius: 25px;
+    border: none;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.company-2 {
+    width: 90px;
+    height: 40px;
+    border-radius: 25px;
+    border: none;
+    color: black;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 40px 0 0 10px;
+}
+
+.option-iphone {
+    margin: 40px 0 50px 0;
+    width: 500px;
+    height: 50px;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.modal-top-p {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.modal-center {
+    background-color: #F5F5F7;
+    height: 750px;
+    width: 100%;
+    margin: 460px 0 0 -730px;
+    padding-left: 100px;
+}
+
+.iPhone-14-button {
+    width: 90%;
+    height: 100px;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+}
+
+.iPhone-14-button img {
+    filter: invert(.5);
+}
+
+.chevron-block hr {
+    width: 90%;
+}
+
+.chevron-1 {
+    margin-top: 20px;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.chevron-1-left p{
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.chevron-1-right {
+    margin-left: 120px;
+}
+
+.chevron-1-right p {
+    font-size: 10px;
+    margin-top: 10px;
+}
+
+.chevron-2-left p {
+    font-size: 16px;
+} 
+
+.chevron-2 {
+    display: flex;
+    margin: 20px 0 30px 0;
+}
+
+.chevron-2-right {
+    margin-left: 70px;
+}
+
+.chavron-2-p {
+    font-size: 10px;
+    margin-top: 5px;
+    font-weight: 500;
+    margin-right: 55px;
+}
+
+.chavron-2-p-2 {
+    font-weight: 600;
+}
+
+.chavron-3 {
+    display: flex;
+    margin: 20px 0 30px 0;
+}
+
+.chavron-3-right {
+    margin-left: 75px;
+}
+
+.chavron-3-right p {
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.chavron-1-all {
+    height: 0px;
+    width: 0px;
+    overflow: hidden;
+}
+
+.iPhone-14-max-button {
+    width: 90%;
+    height: 100px;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+}
+
+.iPhone-14-max-button img {
+    filter: invert(.5);
+}
+
+.chavron-2-all {
+    height: 0px;
+    width: 0px;
+    overflow: hidden;
+}
+
+.p-text p{
+    font-size: 12px;
+    margin-right: 50px;
+    margin-top: 30px;
 }
